# perptrix

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
grafana/provisioning/datasources/: datasources.yml
prometheus/: prometheus.yml
src/: lib.rs  main.rs
src/cache/: mod.rs  redis.rs
src/common/: math.rs  mod.rs
src/config/: mod.rs
src/core/: http.rs  mod.rs  runtime.rs
src/db/: mod.rs  questdb.rs  sqlite.rs
src/engine/: aggregator.rs  mod.rs  signal.rs
src/evaluation/: mod.rs
src/indicators/: error.rs  mod.rs  parser.rs  registry.rs  validation.rs
src/indicators/momentum/: macd.rs  mod.rs  rsi.rs
src/indicators/perp/: funding_rate.rs  mod.rs  open_interest.rs
src/indicators/structure/: mod.rs
src/indicators/trend/: ema.rs  mod.rs  supertrend.rs
src/indicators/volatility/: atr.rs  bollinger.rs  mod.rs
src/indicators/volume/: mod.rs  obv.rs  volume_profile.rs
src/logging/: mod.rs
src/metrics/: mod.rs
src/models/: indicators.rs  mod.rs  signal.rs  strategy.rs
src/services/: market_data.rs  mod.rs
src/services/hyperliquid/: client.rs  messages.rs  mod.rs  provider.rs  rest.rs  subscriptions.rs
src/signals/: decision.rs  engine.rs  mod.rs  signal_generator.rs  types.rs
src/strategies/: mod.rs
tempo/: tempo.yaml
tests/: indicator_parser.rs  indicator_registry.rs  indicator_validation.rs  signal_scenarios.rs  unit.rs
tests/common/: math.rs
tests/core/: http.rs  runtime.rs
tests/engine/: aggregator.rs
tests/indicators/: parser.rs  registry.rs
tests/indicators/momentum/: macd.rs  rsi.rs
tests/indicators/perp/: funding_rate.rs  open_interest.rs
tests/indicators/trend/: ema.rs  supertrend.rs
tests/indicators/volatility/: atr.rs  bollinger.rs
tests/indicators/volume/: obv.rs  volume_profile.rs
tests/integration/: hyperliquid.rs
tests/services/: market_data.rs
tests/signals/: decision.rs  engine.rs
tests/unit/common/: math.rs
tests/unit/core/: http.rs  runtime.rs
tests/unit/indicators/: parser.rs  registry.rs
tests/unit/indicators/momentum/: macd.rs  rsi.rs
tests/unit/indicators/structure/: supertrend.rs  support_resistance.rs
tests/unit/indicators/trend/: adx.rs
tests/unit/indicators/volatility/: atr.rs  bollinger.rs
tests/unit/services/: market_data.rs
tests/unit/signals/: aggregation.rs  categories.rs  decision.rs  engine.rs  scoring.rs
