[package]
name = "perptrix"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
dotenvy = "0.15"

