[package]
name = "perptrix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/bin/api-server.rs"

[[bin]]
name = "websocket-service"
path = "src/bin/websocket-service.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["async-await"] }
url = "2.4"
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
backon = "1.5"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
dotenvy = "0.15"
apalis = "0.7.4"
apalis-redis = "0.7.4"
apalis-cron = "0.7.4"
cron = "0.12"

[dev-dependencies]
wiremock = "0.6"
axum-test = "18.3"
tokio-test = "0.4"

